@@ -1,6 +1,7 @@
 
 Version 1.3.2
 
+    - Added `-directIO' flag to disable kernel caching of the backed file.
     - Fixed bug where stats file was not up to date (issue #26).
     - Fixed bug with `--blockCacheMaxDirty' not working (issue #25).
     - Added automatic block cache disk file resizing (issue #23).
